# icra_unicorn_heedo

./: .gitignore  .gitmodules  CLAUDE.md  FOR_IY.md  INSTALLATION.md  INSTALLATION_eth.md  README.md  README_eth.md  READYTORUN.md  TODO_HJ.md  docker-compose.yaml
f110_utils/libs/grid_filter/: CMakeLists.txt  package.xml  setup.py
f110_utils/libs/grid_filter/src/grid_filter/: grid_filter.py
f110_utils/libs/polygon_filter/: CMakeLists.txt  package.xml
f110_utils/libs/vel_planner/: CMakeLists.txt  package.xml  setup.py
f110_utils/libs/vel_planner/src/vel_planner/: vel_planner.py
f110_utils/nodes/frenet_odom_republisher/frenet_odom_republisher/: CMakeLists.txt  package.xml
f110_utils/nodes/frenet_odom_republisher/frenet_odom_republisher/include/: frenet_odom_republisher_node.h
f110_utils/nodes/frenet_odom_republisher/frenet_odom_republisher/launch/: frenet_odom_republisher.launch
f110_utils/nodes/frenet_odom_republisher/frenet_odom_republisher/src/: frenet_odom_republisher_node.cc
planner/3d_gb_optimizer/global_line/: CMakeLists.txt  package.xml
planner/3d_gb_optimizer/global_line/data/3d_track_data/: gazebo_wall_3d.csv
planner/3d_gb_optimizer/global_line/data/global_racing_lines/: gazebo_wall_2_3d_rc_car_10th_timeoptimal.csv  gazebo_wall_2_3d_rc_car_10th_timeoptimal_before.csv  gazebo_wall_2_3d_rc_car_10th_timeoptimal_ver1.csv  gazebo_wall_3d_rc_car_10th_timeoptimal.csv
planner/3d_gb_optimizer/global_line/data/raw_track_data/: gazebo_wall_bounds_3d.csv
planner/3d_gb_optimizer/global_line/data/sector_config/: sector_friction.yaml  sector_velocity.yaml
planner/3d_gb_optimizer/global_line/data/smoothed_track_data/: gazebo_wall_3d_smoothed.csv
planner/3d_gb_optimizer/global_line/data/vehicle_params/: params_rc_car_10th.yml  params_rc_car_10th_before.yml  (+1 more)
planner/3d_gb_optimizer/global_line/global_racing_line/: apply_sector_velocity.py  export_global_waypoints.py  export_global_waypoints_backup.py  gen_global_racing_line.py  gen_global_racing_line_sector_tuned.py  plot_global_racing_line.py  plot_racing_line_full.py
planner/3d_gb_optimizer/global_line/local_racing_line/: LOCAL_RACING_LINE_PLAN.md  local_raceline_mux_node.py  sim_local_racing_line.py  track3D_lite.py
planner/3d_gb_optimizer/global_line/pcd/: segmentation_info.json
planner/3d_gb_optimizer/global_line/scripts/: manual_segmentation.py  run_pipeline.sh
planner/3d_gb_optimizer/global_line/src/: local_racing_line_planner.py
planner/3d_gb_optimizer/global_line/track_processing/: bag_to_track_csv.py  gen_3d_track_data.py  gen_3d_track_data_v2.py  plot_track.py  smooth_3d_track.py
planner/3d_gb_optimizer/global_line/visualization/: index_viewer.py  plot_raceline.py  tangent_normal_viewer.py
planner/3d_sampling_based_planner/: CMakeLists.txt  README.md  package.xml
planner/3d_sampling_based_planner/cfg/: SamplingCost.cfg
planner/3d_sampling_based_planner/config/: default.yaml
planner/3d_sampling_based_planner/debug_log/: .gitignore
planner/3d_sampling_based_planner/gg_diagram_generation/: plot_gg_diagrams.py
planner/3d_sampling_based_planner/global_racing_line/: gen_global_racing_line.py  plot_global_racing_line.py
planner/3d_sampling_based_planner/launch/: sampling_planner_observe.launch
planner/3d_sampling_based_planner/local_sampling_based/: sim_sampling_based_planner.py
planner/3d_sampling_based_planner/node/: sampling_planner_node.py  sampling_planner_node_original.py  sampling_planner_node_with_mppi.py
planner/3d_sampling_based_planner/src/: sampling_based_planner.py  sampling_based_planner_original.py  sampling_based_planner_with_mppi.py
planner/mpc_planner/: CMakeLists.txt  package.xml
planner/mpc_planner/config/: mpcc_params.yaml  mpcc_params_original.yaml
planner/mpc_planner/launch/: mpc_planner.launch
planner/mpc_planner/node/: mpc_planner_node.py  mpc_planner_node_original.py
planner/mpc_planner/src/: mpcc_solver.py  mpcc_solver_original.py
sensors/blink/: CMakeLists.txt  LICENSE  README.md  package.xml
sensors/blink/examples/: blink.rules  blink1_example.cpp  blink1_example_topic.cpp
sensors/blink/launch/: blink1.launch
sensors/blink/msg/: Blink1msg.msg
sensors/blink/src/: blink1_node.cpp
sensors/blink/srv/: Blink.srv
sensors/elrs_joy/: CMakeLists.txt  package.xml
sensors/elrs_joy/launch/: elrs_joy.launch
sensors/elrs_joy/src/: elrs_joy_node.py
sensors/t2v_node/: CMakeLists.txt  package.xml
sensors/t2v_node/msg/: T2VCommand.msg
sensors/t2v_node/scripts/: t2v_bridge.py
system_identification/race_day_id/: CMakeLists.txt  README.md  package.xml  setup.py
system_identification/race_day_id/config/: maneuver_profiles.yaml  race_day_id_params.yaml
system_identification/race_day_id/launch/: mpc_respawn.launch  race_day_id.launch  race_day_id_sim.launch
system_identification/race_day_id/scripts/: inject_synthetic_gt.py
system_identification/race_day_id/src/race_day_id/: fit_pipeline.py  mpc_respawn.py  orchestrator_node.py  recorder.py  safety_monitor.py  synthetic_gt.py  yaml_writer.py
tsdf_detection_ros/: CMakeLists.txt  package.xml
tsdf_detection_ros/cfg/: dynamic_segmentation.rviz  glil_rviz.rviz  localization_lab.rviz  localization_lab.yaml  small_town_eval.rviz  small_town_simulation.yaml
tsdf_detection_ros/include/tsdf_detection_ros/: conversions.h  esdf_server.h  intensity_server.h  intensity_vis.h  mesh_vis.h  ptcloud_vis.h  simulation_server.h  transformer.h  tsdf_server.h
tsdf_detection_ros/launch/: basement_dataset.launch  cow_and_lady_dataset.launch  dynamic_segmentation.launch  euroc_dataset.launch  glil_bag.launch  kitti_dataset.launch  localization_lab.launch  rgbd_dataset.launch  sim.launch  small_town_simulation.launch
tsdf_detection_ros/launch/eval/: eval_cow.launch  eval_cow_and_lady.launch  eval_euroc.launch  eval_kitti.launch
tsdf_detection_ros/src/: esdf_server.cc  esdf_server_node.cc  intensity_server.cc  intensity_server_node.cc  interactive_slider.cc  simulation_eval.cc  simulation_server.cc  transformer.cc  tsdf_server.cc  tsdf_server_node.cc  visualize_tsdf.cc  voxblox_eval.cc
(+896 files in other folders)
