<?xml version="1.0"?>
<package format="2">
  <name>sampling_based_planner_3d</name>
  <version>0.0.1</version>
  <description>
    ROS1 wrapper around TUMRT/sampling_based_3D_local_planning for the UNICORN
    ICRA 2026 3D racing stack. Observation mode: publishes candidate and best
    trajectories as topics without injecting into the control pipeline.
    Upstream license: GPLv3 (see LICENSE).
  </description>

  <maintainer email="y38621746@gmail.com">HJ</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>f110_msgs</depend>
</package>
