<?xml version="1.0"?>
<package format="2">
  <name>elrs_joy</name>
  <version>1.0.0</version>
  <description>ExpressLRS receiver to sensor_msgs/Joy converter</description>
  <maintainer email="hjkim@unist.ac.kr">HyungJun Kim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
