<?xml version="1.0"?>
<package format="2">
  <name>race_day_id</name>
  <version>0.1.0</version>
  <description>Race-day Pacejka tire identification pipeline (maneuver -> fit -> yaml -> MPC respawn).</description>
  <maintainer email="unicornracing2020@gmail.com">UNICORN Racing</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>f110_msgs</depend>
  <exec_depend>id_controller</exec_depend>
  <exec_depend>on_track_sys_id</exec_depend>
</package>
